test/bad/unable-to-bind.fnl
(let [1 (+ -2 3)] 1)
